# ChangeLog for net-p2p/litecoind
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/litecoind/ChangeLog,v 1.14 2015/07/14 12:01:02 blueness Exp $

*litecoind-0.10.2.2-r1 (14 Jul 2015)

  14 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
  +litecoind-0.10.2.2-r1.ebuild, -litecoind-0.10.2.2.ebuild:
  Install the daemon as well.  Bug #554176c8.

  11 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
  litecoind-0.10.2.2.ebuild:
  Remove some cruft.

  11 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
  litecoind-0.10.2.2.ebuild:
  Tighten up on configure options.

*litecoind-0.10.2.2 (11 Jul 2015)

  11 Jul 2015; Anthony G. Basile <blueness@gentoo.org>
  +files/0.9.0-sys_leveldb.patch, +litecoind-0.10.2.2.ebuild,
  -litecoind-0.8.7.1.ebuild, -litecoind-0.8.7.2.ebuild:
  Version bump.  Bug #554176.

*litecoind-0.8.7.4 (07 Jan 2015)

  07 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  +litecoind-0.8.7.4.ebuild:
  Version bump, bug #535920

*litecoind-0.8.7.2 (28 Aug 2014)

  28 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  +litecoind-0.8.7.2.ebuild:
  Version bump

  28 Aug 2014; Anthony G. Basile <blueness@gentoo.org> litecoind-0.8.7.1.ebuild:
  Remove USE=bash-completion, bug #521352

  28 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  -litecoind-0.8.5.3_rc3.ebuild, -litecoind-0.8.6.1-r1.ebuild,
  -litecoind-0.8.6.1.ebuild:
  Remove older versions

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  litecoind-0.8.5.3_rc3.ebuild, litecoind-0.8.6.1-r1.ebuild,
  litecoind-0.8.6.1.ebuild, litecoind-0.8.7.1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*litecoind-0.8.7.1 (26 May 2014)

  26 May 2014; Anthony G. Basile <blueness@gentoo.org>
  +litecoind-0.8.7.1.ebuild:
  Version bump, bug #508934

*litecoind-0.8.6.1-r1 (25 Feb 2014)

  25 Feb 2014; Anthony G. Basile <blueness@gentoo.org> +files/litecoin.initd-r1,
  +litecoind-0.8.6.1-r1.ebuild:
  Add imrpoved initd, bug #500602
