@@ -11,24 +11,24 @@ AUX litecoin.service 879 SHA256 be344624575e7e69203bd7e17abc930847e27d95217b65b7
 AUX litecoind.logrotate 113 SHA256 dce250c9f27ed9b36fa9376d92fedf89bf6f7f523360dc5baaa65179fd1d504b SHA512 eaa9f462be8dc755b675e4d5cb3ad271e3b1053edfa06df7862fa887160c849c768d2a268a7c8b52d1cfc834c186780b71435ee65475ea6c6692c18bded48dec WHIRLPOOL 3e771d6c2dfddd291386a1ed98009f1778e561a1b8ac43507f3ca709d1c389c3b8d6db5128ade485a0b92ba56b2388727935149af391fe3ef6f9e18ec432c04e
 DIST litecoin-0.10.2.2.tar.gz 4700783 SHA256 952c84b181323db17a8fa23217f59b576ad3ebad92c158b3a7c29d458a1130dc SHA512 46e4c014ae8527dd58af073bab96ea4fd55c69fcc63eaa4fd600bf3c1fc2102500151b49431a72b55334a409d4f5226937cd0c5337feaa4ad49e6ef9e9728aba WHIRLPOOL 5c1d5605d4afb16744fcf0b09dd52eb574aea0cdd9754f94d4cfd9ac064491a0e192d8c4b1a3324e355d71758735265b272dfa41f938212e17badb9f8a70698b
 DIST litecoin-0.8.7.4.tar.gz 4808429 SHA256 032d1eb2ffb06ce467f514e08a66f42bcd507df2d8f1cf2c0541f2906288931a SHA512 14588dab6450bee439c3af16e277afc1f2ff562c93463d9767da27cf724cd6bb4a1c64100806d61dc1d062a39f440e4878e19b425f29e866562acc56c893cca5 WHIRLPOOL 1329d7c234c75b5083f58f5edf69b6ea9acc13f48a9734cd839001dcd3e52c10d3ade55ac853e196deca8b149aba00a3590e52cf766f62b941bd4e4828f10b96
-EBUILD litecoind-0.10.2.2-r1.ebuild 2413 SHA256 0ea854bca55ad5231959cf3d483bcc00534498e17121cde51dc080be9b259bf0 SHA512 b57f0d403918ee7c6aa60eaf8f61890dfd9e8e7441b09aeec1a815caffa30d223b5bba4156b8f512cca820906f8d1ee4686d17f91201ad67a3f51411f9fab3c6 WHIRLPOOL fdfde9f9ec89a0de257766642aa145670dec6287ecce4af20274d6ec268caf86fe3996fbabdf91d9af2af01f883ecba59b157e92d09828245884cf30d5a75d2a
+EBUILD litecoind-0.10.2.2-r1.ebuild 2424 SHA256 f9ab933b552ac3905ab33b8ab0228a4accd5a5d630c207e86c9a5f80b34acdc5 SHA512 cc87dab1bb20cba228af95c80492c2867c9d70153afe7eee3010d544661c44bd389bed5678b66b0eaeeb8ce15374affc239bb71f38a957fc868f9908d483db0f WHIRLPOOL 5ec56c4fe5c7dbcdb9794844b8029286d34717df99cc06a8492fef41ca589a5b7c066ade51c5faae936d33e85d421cf9b235afdd4cdf2cdc1aa28ad2849631de
 EBUILD litecoind-0.8.7.4.ebuild 3125 SHA256 91c30cf6d59e2e7ac812515077c4dc3dceb2c332ea72d04a3c829e28cd94241e SHA512 b3d26cf1f1ca35683326acca4c26b0b10931125eb4957133e7ef5a9ff0388d433658183b64134a11402355c9472860acbb7d6a3f06d2c9c3f17f2cb900d86baa WHIRLPOOL 3420acc8f632f7adbc50a4b1633e929fac6e3e1c1d4a73aa960fcabf8231565d0a53f273767b69e768ae135fc901d951fd69246edf286b605aeeeae82e556e8c
-MISC ChangeLog 2616 SHA256 ce9e179a173625cd902e9bfe23667f9cb624ad128ef503e6166d3547a6ade019 SHA512 8af86f0b5e013c8e94377e37d3614d913c12418af82763bb94950667517e39bfdb3dca6caf0b6dc53e6c369c9abc3502a33a835fd28133e5bfa8bee84d682845 WHIRLPOOL ea7b94eb109ce7d2c789843a6c2b4eee19192bba0e24d0713f1ce290d671f484c17b91720bc5d0341ad68a49745f2de60aaea49fd700596ebc4f6fdcbd164e07
-MISC metadata.xml 417 SHA256 1de63c75b8735f296d87c95d84e276155de185f4481362edd25b2aa6d0374085 SHA512 80cb5ad78f09dc5040f2e74fdd78e4ac176d3f794f4acf5b7082387daaeb39868c0e7ef407c51df8f659d764ca99e123955de1f13df4f59a03adcba752ce6c1f WHIRLPOOL 45dab5e9ad4281afb22eb60df272595198797878a820e019ebbd0692d51c5733d773a5d8a437c9c6e1ad2470068646d9f142ac6dbd23180c2fd7ffb14c729abf
+MISC ChangeLog 2749 SHA256 e6a39384c4b66804c8b4bb73cacc764a971d3d10f32ef17e1c4e033f3a302fb1 SHA512 b4596860579fae6d6b59120b05571873984b4602b719d0a51cf3a8aa0c0bf093c77bf61d669967d5712a77f0f855ec3bc84b537faabeb49d524a97a968c621f3 WHIRLPOOL 76613fba5f31836c7ec60ee31d58b7bd05f2db03a50132344f6161fa5ea8a23c8958396d307aae3c463ffa471222def3106fa40a03fc56946fa229c8f3db3c63
+MISC metadata.xml 468 SHA256 9e98bf348ec027ea2d7c62ca6cec1e7443926a62e834a860cddd1179724c72ca SHA512 ddadc3e1b9ffef4f4e270c48f616599f5f8a09b75476e898b9e77c11b7aa8d206e99280cf588eacbee5879714642e31391edceb7e7dc2a6301aef5b74e619277 WHIRLPOOL 89b7a1ef4d9f365f86dc481dfb0b530d61769cd4db2d463778a97b192ab89f47fcf5679a69ad72332a8ac2ea598642cc55fa65e003d62afa8592b2a220bf0abc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVpPqLAAoJEJOE+m71LUu6u3IP/jHZQuayMIiyUN4l64CCrlLg
-CqdymCoheVwZ7X0LkjTzS/r04+w6AxBkvrhyc/jmgwF6Bz7LODameMb/D8YkO/uW
-w4dW3+sCmqcds8h0qaFPTKyr6rKJjVtwdHDE2oT5BT43A8o0bU/nQ29w34Ol+ala
-xCeyhgSDobbQQ76rmyeK0BWCcxD7hoGMSEZEHCpCOTm0KCtlg0pX0FNwg5QIVTvy
-MHL9mr7MLFViQmaCDLWUk3fzfwakATKo9Y7eIjXKX5pUpL933+8t/f4gYwFwAss9
-P7PqyAH6eh0B4KfuSBDghKh0dSU19Lih9NKR0b2qLt79fMG+QOQNExIDR9A+KafB
-AekXYqGleKf/VdjXe03SxB0bqwMv1/AtG8yQQaYvDOJ4GXEAtW8HRjAtOSBNOXly
-7SYFaUay9FAnqphpXMlXn8RwHQnOwAFKuLRgsLpP2tIRLnortzeU9K6EUTneVbr4
-ZhadbaiWjcYP8btYqn7UmYwWyfeegBdUn6HmLgqwE+rcLhVPwLsZshP6EvKJXfKP
-gyAkAcuG97sfAQLIMcKXPZZA6MzR+rE9yicgJqzmUgUhkZVafGSB5+b/ftArXria
-PxXotuKb6JMX3D+CmcheY02mrKnomC+b2hNeLTJOrix4O+P+VYjy2DoUPdb2wfYP
-yO+MGK59BXftomMwLe5+
-=28Gz
+iQIcBAEBCAAGBQJVqVPTAAoJEJOE+m71LUu6F+0QAKc+hiBSkqU6EOEzIPdZBWi7
+/b73NUygv6zlCchFKdlq17Ncj2ZaudIpq9o1kh3hgMZH+m1jDoPJ8PG91zo32B7i
+dR6CuRCXFonvBvnMHTT4poWa0PiKtOsy0ZL4vj4Ppz0n5nKNP0P2XszkbZ/QfjKU
+XmNQfp0j/eYQxFH43g/nXFCo/GfWIxkRWKeDAW+RNflVfhRewS3zJDlG7vDv29Qd
+WwA0NYlEjqHJHlSm/4rcNYspe8ZNQcm18w2xb1mA5LSWk3FxQVn5PpDV7oqlT1Pr
+96qKCICnPnv/0Sa53CjbwZnpxxwMVH6HJoD8V3oh5VH0mOSLA1JfT7vzIwE7pXYR
+x26BzNVLvLy0QK+X6lTQrZkAPror9hC7+bJWk7cdvqTVlFAyH44/nInoZW+EOsHE
+Antv8RE1yRnXCP9DaSMUbNHawO/lvdKW2N85JFdST+lurlMEm94bL+FSsLjurwFp
+jbnZxMqh/lniCW7PkCLtEnfWRklJJz1Lvl6Bs90S26ftttAJKlPAb7k+0ZNaJ853
+x33VaJlosQ91r7o+54NXVhzr3GQudXShiAx9xFjE3Q3MMQ+dTNwS9O2QFm9MLeeq
+DquqaKx8hdh9kLULwl9+kkD0iJHq3VmiSJgZmdIo7xeZhkxrFKEK9awB0Kct02qC
+N//sJGhtqyZylKB7oCkO
+=+Sk0
 -----END PGP SIGNATURE-----
