@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/litecoind/litecoind-0.10.2.2-r1.ebuild,v 1.1 2015/07/14 12:01:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/litecoind/litecoind-0.10.2.2-r1.ebuild,v 1.2 2015/07/17 19:10:54 blueness Exp $
 
 EAPI=5
 
@@ -19,7 +19,7 @@ SRC_URI="https://github.com/${MyPN}-project/${MyPN}/archive/v${MyPV}.tar.gz -> $
 LICENSE="MIT ISC GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="logrotate upnp"
+IUSE="logrotate upnp +wallet"
 
 RDEPEND="
 	dev-libs/boost[threads(+)]
@@ -56,7 +56,7 @@ src_configure() {
 		my_econf="${my_econf} --without-miniupnpc --disable-upnp-default"
 	fi
 	econf \
-		--disable-wallet \
+		$(use_enable wallet)\
 		--disable-ccache \
 		--disable-static \
 		--disable-tests \
