@@ -7,6 +7,7 @@
 	</maintainer>
 	<use>
 		<flag name="logrotate">Use app-admin/logrotate for rotating logs</flag>
+		<flag name='wallet'>Enable wallet support</flag>
 	</use>
 	<upstream>
 		<remote-id type="github">litecoin-project/litecoin</remote-id>
